# AI_Bell

./: .gitignore  README.md  main.py  pyproject.toml
data/: data_222.npz  facet_classes_322.tsv  facet_classes_322_examples.txt  facet_classes_322_mean_parallel_check.txt  facets_222.txt  polytope_222.ext  regression_322_report.txt
docs/: 2026-1-5-rzq.pptx  Differentiable Convex Optimization Layers note.md  experiment_record_template.md  index.md
docs/experiments/222/: experiment_record_1.md  experiment_record_2.md  experiment_record_3.md
docs/experiments/322/: experiment_record_4.md  experiment_record_5.md
src/aibell/: Solver_222.py  Solver_hyperplane.py  Solver_n22.py  __init__.py  check_data.py  data_generator.py  sampler.py  temp_text.py  tool.py
src/aibell/Scenario_322/: boundaries_322_results.pkl  env_322.py  train_322.py
src/aibell/Scenario_322_bad_result/: agent_322.py  env_322.py  random_selection.py  train_322.py
src/experiments/222/: test_graph_isomorphism_222_from_indices.py  test_graph_isomorphism_222_single_orbit.py
src/experiments/222/dqn/: agent.py  train.py
src/experiments/322/: test_graph_isomorphism_322.py  test_graph_isomorphism_322_from_indices.py  test_graph_isomorphism_322_single_orbit.py
src/experiments/422/: test_graph_isomorphism_422.py  test_graph_isomorphism_422_single_orbit.py
src/mlp/: data_processing.py  main.py  model.py  predict.py
src/rl/: agent.py  benchmark.py  points.py  train.py
tests/: test_groundtruth_solver_222.py  test_groundtruth_solver_n22.py  test_group_valid.py  test_traverse.py  test_traverse_new.py
(+846 files in other folders)
