[project]
name = "aibell"
version = "0.1.0"
description = "AI agent for searching Bell inequality"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "mosek>=11.0.30",
    "ncpol2sdpa",
    "numpy>=2.4.0",
    "scikit-learn>=1.8.0",
    "torch<=2.6.0",
    "tqdm>=4.67.1",
]


[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu124"
explicit = true



[tool.uv.sources]
ncpol2sdpa = { git = "https://github.com/peterjbrown519/ncpol2sdpa.git", rev = "6fbae1d5afa4e8a3a1f67890878b8ac31f30ae55" }
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
